--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,11 @@ input[type="number"]::-webkit-outer-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+::-webkit-scrollbar {
+  width: 8px;
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+  background-color: #fdc63a;
+}
