--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,9 @@
 }
 
 .hide_scroll::-webkit-scrollbar {
-  display: none;
+  height: 8px;
 }
+
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
