--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,9 @@
   scroll-behavior: smooth;
   font-family: "Poppins", sans-serif;
 }
-
 .hide_scroll::-webkit-scrollbar {
   height: 8px;
 }
-
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -23,4 +21,12 @@ input[type="number"] {
 ::-webkit-scrollbar-thumb {
   border-radius: 12px;
   background-color: #fdc63a;
+}
+.swal-footer {
+  text-align: center !important;
+}
+.swal-text {
+  font-size: 1.2rem !important;
+  font-weight: 500;
+  text-transform: capitalize;
 }
