--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @tailwind base;
-  @tailwind components;
-  @tailwind utilities;
-  
+@tailwind components;
+@tailwind utilities;
+@layer utilities {
+  .table-text {
+    @apply 2xl:text-2xl text-xl leading-5 text-[#282828];
+  }
+}
